service.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-project-service
  namespace: final-project
spec:
  selector:
    app: final-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
