ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-project-ingress
  namespace: final-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: final-project.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: final-project-service
            port:
              number: 80
